--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_DB=trashandler
-POSTGRES_USER=dev
-POSTGRES_PASSWORD=Saurabh@123
-DATABASE_URL=postgres://postgres:Saurabh@123@127.0.0.1:5432/trashandler
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+DATABASE_URL=
