--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__
 env/
 work/
 venv/
-.env/
-.gitattributes/
+.env
+.gitattributes
 memo/
 uvicorn trashapi.asgi:application --port 8000 --workers 4 --log-level debug --reload
